--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">Bootstrap Test</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"></button>
+          </button>
+            <ul class="navbar-nav ms-auto">
+              <li><a class="nav-link" href="#">Home</a></li>
+              <li><a class="nav-link" href="#">Services</a></li>
+              <li><a class="nav-link" href="#">Portfolio</a></li>
+              <li><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+        </div>
+      </nav>
+      
 
+      
 </body>
 
 </html>
