--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
         </div>
       </nav>
       
-
+      <section class="bg-light py-5">
+        <div class="container text-center">
+          <h1 class="display-4">Welcome to Our Company</h1>
+          <p class="lead">Explore our services below</p>
+        </div>
+      </section>
       
+
 </body>
 
 </html>
