--- a/index.html
+++ b/index.html
@@ -9,25 +9,52 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="#">Bootstrap Test</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"></button>
-          </button>
+            <a class="navbar-brand" href="#">Bootstrap</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"></button>
+            </button>
             <ul class="navbar-nav ms-auto">
-              <li><a class="nav-link" href="#">Home</a></li>
-              <li><a class="nav-link" href="#">Services</a></li>
-              <li><a class="nav-link" href="#">Portfolio</a></li>
-              <li><a class="nav-link" href="#">Contact</a></li>
+                <li><a class="nav-link" href="#">Home</a></li>
+                <li><a class="nav-link" href="#">Services</a></li>
+                <li><a class="nav-link" href="#">Portfolio</a></li>
+                <li><a class="nav-link" href="#">Contact</a></li>
             </ul>
         </div>
-      </nav>
-      
-      <section class="bg-light py-5">
+    </nav>
+
+    <section class="bg-light py-5">
         <div class="container text-center">
-          <h1 class="display-4">Welcome to Our Company</h1>
-          <p class="lead">Explore our services below</p>
+            <h1 class="display-4">Welcome to Our Company</h1>
+            <p class="lead">Explore our services below</p>
         </div>
-      </section>
-      
+    </section>
+
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <i class="bi bi-card-checklist" style="font-size: 2rem;"></i>
+                    <h4>Personalized Fitness Coaching</h4>
+                    <p>This online platform connects users with certified fitness coaches who create customized workout
+                        plans and nutrition guides based on individual goals, preferences, and fitness levels.</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <i class="bi bi-briefcase" style="font-size: 2rem;"></i>
+                    <h4>Nutrition and Meal Planning</h4>
+                    <p>This service provides personalized meal plans and recipes tailored to users' dietary preferences
+                        and fitness goals. It could work hand-in-hand with the fitness coaching platform.</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <i class="bi bi-laptop" style="font-size: 2rem;"></i>
+                    <h4>Virtual Fitness Classes</h4>
+                    <p>This service offers live and on-demand fitness classes and workshops led by expert trainers. It
+                        provides users with the opportunity to participate in various workout styles from the comfort of
+                        their homes.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 
