--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <h4>Personalized Fitness Coaching</h4>
                     <p>This online platform connects users with certified fitness coaches who create customized workout
                         plans and nutrition guides based on individual goals, preferences, and fitness levels.</p>
+
                 </div>
                 <div class="col-md-4 text-center">
                     <i class="bi bi-briefcase" style="font-size: 2rem;"></i>
@@ -50,6 +51,73 @@
                     <p>This service offers live and on-demand fitness classes and workshops led by expert trainers. It
                         provides users with the opportunity to participate in various workout styles from the comfort of
                         their homes.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="instructor1.jpg" class="card-img-top" alt="Instructor 1">
+                        <div class="card-body">
+                            <h5 class="card-title">David Kim</h5>
+                            <p class="card-text">David takes a holistic approach to fitness, integrating physical
+                                training with mental well-being. With certifications in yoga and mindfulness, he
+                                emphasizes the importance of mental health in achieving fitness goals. His training
+                                sessions combine strength training, flexibility exercises, and meditation techniques.
+                                David works closely with clients to understand their personal challenges and goals,
+                                fostering a supportive environment that encourages growth. His unique approach helps
+                                clients not only improve their physical fitness but also enhance their overall quality
+                                of life.</p>
+                            <a href="https://www.linkedin.com/in/nicholas-carreiro-85b433250/" target="_blank"
+                                class="btn btn-outline-primary btn-sm">
+                                <i class="bi bi-linkedin"></i> LinkedIn
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="instructor2.jpg" class="card-img-top" alt="Instructor 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Mark Robinson</h5>
+                            <p class="card-text">Mark is a dedicated personal trainer with a focus on strength and
+                                conditioning. With a background in sports performance and personal training, he
+                                specializes in helping athletes and fitness enthusiasts build muscle, improve endurance,
+                                and enhance overall performance. Mark’s training sessions are structured and
+                                goal-oriented, often incorporating weightlifting, plyometrics, and functional movements
+                                tailored to each client's needs. Mark believes in fostering a strong mind-body
+                                connection, helping
+                                clients develop resilience and confidence both in and out of the gym.</p>
+                                <a href="https://www.linkedin.com/in/nicholas-carreiro-85b433250/" target="_blank"
+                                class="btn btn-outline-primary btn-sm">
+                                <i class="bi bi-linkedin"></i> LinkedIn
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="instructor3.jpg" class="card-img-top" alt="Instructor 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Jessica Martinez</h5>
+                            <p class="card-text">Jessica is a dynamic personal trainer known for her high-intensity
+                                interval training (HIIT) sessions. With a competitive background in bodybuilding and
+                                athletics, she pushes her clients to their limits while ensuring they maintain proper
+                                form and technique. Jessica's workouts are fast-paced and challenging, designed to
+                                maximize calorie burn and boost metabolism. She is especially skilled at training
+                                athletes and individuals looking to improve their performance in sports. Jessica's
+                                motivational style inspires clients to break through barriers and achieve their personal
+                                best.</p>
+                                <a href="https://www.linkedin.com/in/nicholas-carreiro-85b433250/" target="_blank"
+                                class="btn btn-outline-primary btn-sm">
+                                <i class="bi bi-linkedin"></i> LinkedIn
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
