--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 tailored to each client's needs. Mark believes in fostering a strong mind-body
                                 connection, helping
                                 clients develop resilience and confidence both in and out of the gym.</p>
-                                <a href="https://www.linkedin.com/in/nicholas-carreiro-85b433250/" target="_blank"
+                            <a href="https://www.linkedin.com/in/nicholas-carreiro-85b433250/" target="_blank"
                                 class="btn btn-outline-primary btn-sm">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
@@ -112,7 +112,7 @@
                                 athletes and individuals looking to improve their performance in sports. Jessica's
                                 motivational style inspires clients to break through barriers and achieve their personal
                                 best.</p>
-                                <a href="https://www.linkedin.com/in/nicholas-carreiro-85b433250/" target="_blank"
+                            <a href="https://www.linkedin.com/in/nicholas-carreiro-85b433250/" target="_blank"
                                 class="btn btn-outline-primary btn-sm">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
@@ -125,31 +125,33 @@
 
     <section class="py-5 bg-light">
         <div class="container">
-          <h2 class="text-center mb-4">Contact Us</h2>
-          <form>
-            <div class="mb-3">
-              <label for="name" class="form-label">Name</label>
-              <input type="text" class="form-control form-control-lg" id="name" placeholder="Enter your name" required>
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control form-control-lg" id="email" placeholder="Enter your email" required>
-            </div>
-            <div class="mb-3">
-              <label for="message" class="form-label">Message</label>
-              <textarea class="form-control form-control-lg" id="message" rows="3" placeholder="Your message" required></textarea>
-            </div>
-            <div class="text-center">
-              <button type="submit" class="btn btn-primary btn-lg">Send Message</button>
-            </div>
-          </form>
+            <h2 class="text-center mb-4">Contact Us</h2>
+            <form>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control form-control-lg" id="name" placeholder="Enter your name"
+                        required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control form-control-lg" id="email" placeholder="Enter your email"
+                        required>
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control form-control-lg" id="message" rows="3" placeholder="Your message"
+                        required></textarea>
+                </div>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary btn-lg">Send Message</button>
+                </div>
+            </form>
         </div>
-      </section>
-      
-      <footer class="bg-dark text-white text-center py-3">
+    </section>
+
+    <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2024 Bootstrap. All Rights Reserved.</p>
-      </footer>
-      
+    </footer>
 
 </body>
 
