--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"></button>
             </button>
             <ul class="navbar-nav ms-auto">
-                <li><a class="nav-link" href="#">Home</a></li>
-                <li><a class="nav-link" href="#">Services</a></li>
-                <li><a class="nav-link" href="#">Portfolio</a></li>
-                <li><a class="nav-link" href="#">Contact</a></li>
+                <li><a class="nav-link" href="#hero">Home</a></li>
+                <li><a class="nav-link" href="#services">Services</a></li>
+                <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                <li><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
 
-    <section class="bg-light py-5">
+    <section id="hero" class="bg-light py-5">
         <div class="container text-center">
             <h1 class="display-4">Welcome to Our Company</h1>
             <p class="lead">Explore our services below</p>
         </div>
     </section>
 
-    <section class="py-5">
+    <section id="services" class="py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 text-center">
@@ -56,7 +56,7 @@
         </div>
     </section>
 
-    <section class="py-5">
+    <section id="portfolio" class="py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -123,7 +123,7 @@
         </div>
     </section>
 
-    <section class="py-5 bg-light">
+    <section id="contact" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-4">Contact Us</h2>
             <form>
