--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootsrap Lab</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> <!-- Bootstrap CSS link -->
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"> <!-- Navbar with light background color -->
+        <div class="container"> 
             <a class="navbar-brand" href="#">Bootstrap</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"></button>
-            </button>
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav ms-auto"> <!-- Navbar items aligned to the right -->
                 <li><a class="nav-link" href="#hero">Home</a></li>
                 <li><a class="nav-link" href="#services">Services</a></li>
                 <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
@@ -22,18 +19,17 @@
         </div>
     </nav>
 
-    <section id="hero" class="bg-light py-5">
+    <section id="hero" class="bg-light py-5"> <!-- Hero section with light background color and padding top/bottom 5 -->
         <div class="container text-center">
             <h1 class="display-4">Welcome to Our Company</h1>
             <p class="lead">Explore our services below</p>
         </div>
     </section>
 
-    <section id="services" class="py-5">
-        <div class="container">
+    <section id="services" class="py-5"> <!-- Services section with padding top/bottom 5 -->
             <div class="row">
-                <div class="col-md-4 text-center">
-                    <i class="bi bi-card-checklist" style="font-size: 2rem;"></i>
+                <div class="col-md-4 text-center">  <!-- Column with width 4 and text center aligned -->
+                    <i class="bi bi-card-checklist" style="font-size: 2rem;"></i>  <!-- Bootstrap with size 2rem -->
                     <h4>Personalized Fitness Coaching</h4>
                     <p>This online platform connects users with certified fitness coaches who create customized workout
                         plans and nutrition guides based on individual goals, preferences, and fitness levels.</p>
@@ -56,10 +52,10 @@
         </div>
     </section>
 
-    <section id="portfolio" class="py-5">
+    <section id="portfolio" class="py-5"> <!-- Portfolio section with padding top/bottom 5 -->
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4"> <!-- Column with width 4 -->
                     <div class="card">
                         <img src="instructor1.jpg" class="card-img-top" alt="Instructor 1">
                         <div class="card-body">
@@ -72,9 +68,9 @@
                                 fostering a supportive environment that encourages growth. His unique approach helps
                                 clients not only improve their physical fitness but also enhance their overall quality
                                 of life.</p>
-                            <a href="https://www.linkedin.com/in/nicholas-carreiro-85b433250/" target="_blank"
+                            <a href="https://www.linkedin.com/in/nicholas-carreiro-85b433250/" target="_blank" 
                                 class="btn btn-outline-primary btn-sm">
-                                <i class="bi bi-linkedin"></i> LinkedIn
+                                <i class="bi bi-linkedin"></i> LinkedIn <!-- LinkedIn link -->
                             </a>
                         </div>
                     </div>
@@ -123,14 +119,14 @@
         </div>
     </section>
 
-    <section id="contact" class="py-5 bg-light">
+    <section id="contact" class="py-5 bg-light"> <!-- Contact section with padding top/bottom 5 and light background color -->
         <div class="container">
-            <h2 class="text-center mb-4">Contact Us</h2>
+            <h2 class="text-center mb-4">Contact Us</h2> <!-- Heading with margin bottom 4 -->
             <form>
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
+                <div class="mb-3"> <!-- Margin bottom 3 -->
+                    <label for="name" class="form-label">Name</label> <!-- Label for name input field -->
                     <input type="text" class="form-control form-control-lg" id="name" placeholder="Enter your name"
-                        required>
+                        required> <!-- Input field with large size and required attribute -->
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
@@ -149,7 +145,7 @@
         </div>
     </section>
 
-    <footer class="bg-dark text-white text-center py-3">
+    <footer class="bg-dark text-white text-center py-3"> <!-- Footer with dark background color, white text color, and padding top/bottom 3 -->
         <p>&copy; 2024 Bootstrap. All Rights Reserved.</p>
     </footer>
 
